--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sklearn\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import linear_model\n",
@@ -23,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_DataframesFile = pd.read_csv(\"all_DataframesFile.csv\")\n",
-    "all_DataframesFileByMonth = pd.read_csv(\"all_DataframesFileByMonth.csv\")"
+    "all_DataframesFileByMonth = pd.read_csv(\"all_DataframesFileByMonth.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,12 +186,13 @@
        "[14518 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "df_copy=all_DataframesFile.copy()\n",
     "df_copy[\"status\"] = df_copy[\"rain_mm\"]>30 \n",
     "df_copy= df_copy.drop(['rain_yesterday_mm','Change_from_last_day','stations','rain_mm','Date','KinneretInPrecent','year','day','rain_day','Kinneret_Level','rpr_hail','rpr_snow','rpr_gale'],axis=1)\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -243,14 +243,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_accuracy =  0.9036606967132454\n",
-      "test_accuracy =  0.9042699724517906\n",
-      "90.42699724517907\n"
+      "train_accuracy =  0.9020862035032474\n",
+      "test_accuracy =  0.9084022038567493\n",
+      "90.84022038567493\n"
      ]
     }
    ],
    "source": [
-    "TRAINING_FEATURES = df_copy.columns[df_copy.columns != 'status'] # create a Logistic regression object\n",
+    "TRAINING_FEATURES = df_copy.columns[df_copy.columns != 'status'] \n",
     "TARGET_FEATURE    = 'status'\n",
     "X = df_copy[TRAINING_FEATURES]\n",
     "y = df_copy[TARGET_FEATURE]\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -278,19 +278,17 @@
     }
    ],
    "source": [
-    "lr_rain = linear_model.LinearRegression() # create a linear regression object\n",
+    "lr_rain = linear_model.LinearRegression()\n",
     " \n",
     "x = all_DataframesFileByMonth['rain_mm'].values.reshape(all_DataframesFileByMonth['rain_mm'].shape[0],1)\n",
     "y = all_DataframesFileByMonth['Change_from_last_month'].values.reshape(all_DataframesFileByMonth['Change_from_last_month'].shape[0],1)\n",
-    "\n",
     "lr_rain.fit(X=x, y=y)\n",
-    "\n",
     "print(\"Score:\",lr_rain.score(x,y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -302,21 +300,90 @@
     }
    ],
    "source": [
-    "lr_sns = linear_model.LinearRegression() # create a linear regression object\n",
+    "\n",
+    "lr_sns = linear_model.LinearRegression()\n",
     "\n",
     "x = all_DataframesFileByMonth[(all_DataframesFileByMonth['sns_drt']>0)]['sns_drt'].values.reshape(all_DataframesFileByMonth[(all_DataframesFileByMonth['sns_drt']>0)]['sns_drt'].shape[0],1)\n",
     "y = all_DataframesFileByMonth[(all_DataframesFileByMonth['sns_drt']>0)]['Change_from_last_month'].values.reshape(all_DataframesFileByMonth[(all_DataframesFileByMonth['sns_drt']>0)]['Change_from_last_month'].shape[0],1)\n",
-    "\n",
     "lr_sns.fit(X=x, y=y)\n",
-    "\n",
     "print(\"Score:\",lr_sns.score(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.6175459128618557\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lr = linear_model.LinearRegression()\n",
+    "\n",
+    "x = all_DataframesFileByMonth[['rain_mm',\"month\",\"sns_drt\"]]\n",
+    "y = all_DataframesFileByMonth['Change_from_last_month']\n",
+    "lr.fit(X=x, y=y);\n",
+    "print(\"Score:\",lr.score(x,y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the monthly amount of precipitation\n",
+      "> 10\n",
+      "Insert a month\n",
+      "> 8\n",
+      "Enter the monthly sunrise time\n",
+      "> 5000\n",
+      "The level of the Sea of Galilee will down by: [-3.28883335]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ezrao\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:670: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  iloc._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Enter the monthly amount of precipitation')\n",
+    "rain = input('> ')\n",
+    "print ('Insert a month')\n",
+    "month = input('> ')\n",
+    "print ('Enter the monthly sunrise time')\n",
+    "sns_drt = input('> ')\n",
+    "df_empty = x[0:0] \n",
+    "df_empty.loc[0]= (rain,month,sns_drt)\n",
+    "Level_changes=lr.predict(df_empty.values)\n",
+    "if Level_changes>=0: \n",
+    "    print(\"The level of the Sea of Galilee will rise by:\",Level_changes)\n",
+    "else:\n",
+    "    print(\"The level of the Sea of Galilee will down by:\",Level_changes)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "\n",
+    "  "
    ]
   }
  ],
